# tool_log

./: .env  .gitignore  README.md  alembic.ini  auth.py  debug_heartbeat.sh  deploy.sh  heartbeat.sh  log_device_setup.sh  log_device_setup.sh.txt  log_device_setup_not_working.sh  postcss.config.js  pyproject.toml  repair_server_setup.sh  requirements.txt  rpi-scanner.ps1  server_setup.sh  tailwind.config.js  test.db  update_log_devices.sh
1 Purchasing List/: purchase list.txt
2 Server Files/: check_github.sh  directories.txt  internet_check.sh  nginx_setup.sh  postgres_setup.sh  rotate_screen.sh  start_active_service.sh  start_browser.sh  tool_log_blue.service  tool_log_green.service  tool_log_logrotate  wayfire.ini
3d Models/: ToolLogKioskShell.SLDPRT  ToolLogKioskShell3.0.STEP
alembic/: env.py
alembic/versions/: 042357e55395_removed_name_from_recipe_as_its_always_.py  08fcd8c81638_reinit_database_schema.py  0b246048e92f_added_selected_to_toolposition_instead_.py  0c6aed9f25ee_added_price_to_tool.py  0dcec4bfb26f_added_shifts.py  142d98c7d1fa_changed_date_from_datetime_to_date_and_.py  14f078cdcb77_renamed_created_by_to_creator_id_in_.py  1acd1b671f67_refined_uniqueness_of_machine_based_on_.py  20250417_add_machine_status_notify.py  25caad939588_added_unique_constraints_to_order_.py  265a24829e8f_added_production_model_for_tracking_of_.py  291c5d689a06_added_tool_setting_to_replace_tool_.py  30ef50c5b387_added_sentiment_to_changereason.py  31c1439a161f_added_shipping_company_and_tracking_.py  (+44 more)
app/: broadcast.py  database_config.py  event_listener.py  main.py
(+139 files in other folders)
