[project]
name = "tool-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.2",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.3.3",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
]
