[project]
name = "tool-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "apscheduler>=3.11.0",
    "fastapi-tailwind>=2.0.2a1",
    "fastapi[standard]>=0.115.2",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.3",
    "pytailwindcss>=0.2.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "pytz>=2024.2",
    "salib>=1.5.1",
    "scipy>=1.15.0",
    "sqlmodel>=0.0.22",
    "tailwindcss>=0.0.1",
]
